added support to ignore a branch push event if its associated with a open PR as the PR will trigger another event with the full merged diff

--- a/src/main/resources/com/nwellinghoff/jenkins/plugins/multibranch/buildstrategy/IncludeRegExMatchBranchBuildStrategy/help-includedRegions.html
+++ b/src/main/resources/com/nwellinghoff/jenkins/plugins/multibranch/buildstrategy/IncludeRegExMatchBranchBuildStrategy/help-includedRegions.html
@@ -2,6 +2,7 @@
   Use line seperated regex patterns to kick off build if any pattern matches
   <p/>
   <pre>
+    ^rootFolder/.*$
     ^.+/folder2/.*$
     ^.+/folder46/.*$
   </pre>
